--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zooid-page",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Page",
   "main": "dist/bundle.js",
   "scripts": {
@@ -61,49 +61,52 @@
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "^3.0.7",
-    "@kadira/storybook": "^1.35.1",
+    "@kadira/storybook": "^2.35.3",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.0",
-    "css-loader": "^0.23.1",
+    "chai-enzyme": "^0.6.1",
+    "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.1",
     "enzyme": "^2.3.0",
     "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^1.6.0",
-    "eslint-plugin-jsx-a11y": "^2.0.0",
-    "eslint-plugin-react": "^5.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "ignore-styles": "^4.0.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "ignore-styles": "^5.0.1",
     "jsdom": "^9.1.0",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0",
+    "mocha": "^3.2.0",
+    "mocha-multi": "^0.11.0",
     "mocha-osx-reporter": "^0.1.2",
-    "nyc": "^7.0.0",
-    "postcss-loader": "^0.9.1",
+    "nyc": "^10.2.0",
+    "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-test-renderer": "^15.5.4",
     "rimraf": "^2.5.2",
-    "sinon": "^1.17.3",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "stylefmt": "^4.0.0",
-    "stylelint": "^6.6.0",
-    "stylelint-config-standard": "^10.0.0",
-    "webpack": "^1.13.0"
+    "style-loader": "^0.16.1",
+    "stylefmt": "^5.3.2",
+    "stylelint": "^7.10.1",
+    "stylelint-config-standard": "^16.0.0",
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash.iserror": "^3.1.1",
+    "prop-types": "^15.5.8",
     "react": "^15.0.1",
-    "zooid-heading": "^1.0.5",
-    "zooid-spinner": "^1.0.2"
+    "zooid-heading": "^1.0.10",
+    "zooid-spinner": "^1.0.5"
   }
 }
